--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "version": "0.0.1",
   "description": "This is a react component library",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -19,11 +21,20 @@
   },
   "homepage": "https://github.com/kuntal-ghosh/react-component-library#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@types/react": "^17.0.39",
+    "babel-loader": "^8.2.3",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.68.0",
     "rollup-plugin-dts": "^4.1.0",
     "tslib": "^2.3.1",
